2008-08-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issues #8673 and #8599: Correction for drag and drop

2008-07-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8673: Incorrect handling of images in the RTE with TYPO3 4.2 and trunk DAM
	* Fixed bug #8599: Replace dam extension of tx_rtehtmlarea_browse_links with implementation of interface t3lib_browselinkshook

2008-05-30  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7342-1: dam_catedit doesn't work properly with 4.2-trunk (clickmenu javascript error), part 1

2008-05-28  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8528: DAM always resolves a DRAFT workspace version of records, can't get the LIVE version
	* Bumped version to 1.1.0-dev

2008-05-19  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7344: DAM does not preview correct files in workspaces

2008-05-16  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #8426: tca_media_field.php has some weird indented code

2008-05-09  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #5527: Go to editing of DAM record from the content element (image)

2008-05-09  Benjamin Mack  <benni@typo3.org>

	* Followup for #5681: jumpToUrl is now working perfectly
	* Fixed bug #8333: DAM Browser does not show any files.
	* Fixed bug #8007: htmlArea -> DAM Media Browser -> File -> change directory throws Exception under 4.2.0 Description

2008-05-09  Peter Keuhn  <peter.kuehn@wmdb.de>

	* Fixed bug #7762: Failed query during install (perform some changes on table tx_dam_mm_ref without first checking whether it exists or not), Thanks Peter Kuehn

2008-05-09  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7859: DAM adds column ce_flexform on wrong condition

2008-05-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #5681: Link Popup javascript error when changing DAM directory in File selection

2008-05-06  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #8223: Add DEFAULT '' to field file_path in table tx_dam (not how we fixed it)
